<resources>
    <string name="app_name">Popular Movies</string>
    <string name="title">Title:</string>
    <string name="plot">Plot:</string>
    <string name="avg_vote">Avg vote:</string>
    <string name="release_date">Release:</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="no_results">The query returns no results</string>
    <string name="details_activity">Details</string>
    <string name="reviews">Reviews</string>
    <string name="trailers">Trailers</string>
    <string name="author">Author:%1$s</string>
    <string name="movie_video">Movie video</string>
    <string name="favorites_button">Favorites Button</string>
    <string name="most_popular">Most popular</string>
    <string name="top_rated">Top rated</string>
    <string name="favorites">Favorites</string>
    <string name="connection_error">Something went wrong. Check the internet connection</string>
    <string name="sort_criterion_key">sorting</string>
</resources>
