<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/label_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:contentDescription="@string/movie_poster" />

            <LinearLayout
                android:id="@+id/takie_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/title_layout_height"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/title_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="@dimen/title_size"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="@dimen/label_width"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/label_margin"
                                android:gravity="end"
                                android:text="@string/avg_vote"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/vote_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="@dimen/label_width"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/label_margin"
                                android:gravity="end"
                                android:text="@string/release_date"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/realease_date_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageButton

                        android:id="@+id/favorites_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/favorites_button"
                        android:onClick="onFavoritesButtonClick"
                        android:src="@android:drawable/btn_star_big_off" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/label_margin"
                android:gravity="end"
                android:text="@string/plot"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/plot_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trailers"
            android:textStyle="bold" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/trailers_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </HorizontalScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/reviews_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </LinearLayout>
</ScrollView>
